# gf-android

DemoGF/: settings.gradle
DemoGF/app/: build.gradle
DemoGF/app/src/androidTest/java/com/exemple/demogf/: ExampleInstrumentedTest.java
DemoGF/app/src/main/: AndroidManifest.xml
DemoGF/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
DemoGF/app/src/main/java/com/exemple/demogf/: MainActivity.java
DemoGF/app/src/main/res/values/: strings.xml  themes.xml
DemoGF/app/src/main/res/values-night/: themes.xml
DemoGF/app/src/test/java/com/exemple/demogf/: ExampleUnitTest.java
DemoGF/gradle/wrapper/: gradle-wrapper.properties
GfDemo/: .gitignore  settings.gradle
GfDemo/app/: build.gradle
GfDemo/app/src/androidTest/java/com/exemple/gfdemo/: ExampleInstrumentedTest.java
GfDemo/app/src/main/: AndroidManifest.xml
GfDemo/app/src/main/cpp/: CMakeLists.txt  gf-demo.cc
GfDemo/app/src/main/java/com/exemple/gfdemo/: MainActivity.java
GfDemo/app/src/main/res/values/: strings.xml  themes.xml
GfDemo/app/src/main/res/values-night/: themes.xml
GfDemo/app/src/test/java/com/exemple/gfdemo/: ExampleUnitTest.java
GfDemo/gradle/wrapper/: gradle-wrapper.properties
dependencies-builder/: build-all.sh  build-boost.sh  build-freetype.sh  build-gf.sh  build-pugixml.sh  build-sdl.sh  functions.sh  targets.sh
